@@ -1,5 +1,5 @@
 /**
- *    Copyright 2006-2018 the original author or authors.
+ *    Copyright 2006-2019 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -29,9 +29,11 @@ import org.mybatis.generator.api.IntrospectedColumn;
 import org.mybatis.generator.api.IntrospectedTable;
 import org.mybatis.generator.api.JavaFormatter;
 import org.mybatis.generator.api.JavaTypeResolver;
+import org.mybatis.generator.api.KotlinFormatter;
 import org.mybatis.generator.api.Plugin;
 import org.mybatis.generator.api.XmlFormatter;
 import org.mybatis.generator.api.dom.DefaultJavaFormatter;
+import org.mybatis.generator.api.dom.DefaultKotlinFormatter;
 import org.mybatis.generator.api.dom.DefaultXmlFormatter;
 import org.mybatis.generator.codegen.mybatis3.IntrospectedTableMyBatis3Impl;
 import org.mybatis.generator.codegen.mybatis3.IntrospectedTableMyBatis3SimpleImpl;
@@ -43,7 +45,9 @@ import org.mybatis.generator.config.PluginConfiguration;
 import org.mybatis.generator.config.PropertyRegistry;
 import org.mybatis.generator.config.TableConfiguration;
 import org.mybatis.generator.internal.types.JavaTypeResolverDefaultImpl;
-import org.mybatis.generator.runtime.dynamic.sql.IntrospectedTableMyBatis3DynamicSqlImpl;
+import org.mybatis.generator.runtime.dynamic.sql.IntrospectedTableMyBatis3DynamicSqlImplV1;
+import org.mybatis.generator.runtime.dynamic.sql.IntrospectedTableMyBatis3DynamicSqlImplV2;
+import org.mybatis.generator.runtime.kotlin.IntrospectedTableKotlinImpl;
 
 /**
  * This class creates the different objects needed by the generator.
@@ -109,7 +113,7 @@ public class ObjectFactory {
             try {
                 clazz = Class.forName(type, true, classLoader);
                 return clazz;
-            } catch (Throwable e) {
+            } catch (Exception e) {
                 // ignore - fail safe below
             }
         }
@@ -122,7 +126,7 @@ public class ObjectFactory {
 
         try {
             Class<?> clazz = externalClassForName(type);
-            answer = clazz.newInstance();
+            answer = clazz.getConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(getString(
                     "RuntimeError.6", type), e); //$NON-NLS-1$
@@ -175,7 +179,7 @@ public class ObjectFactory {
         try {
             Class<?> clazz = internalClassForName(type);
 
-            answer = clazz.newInstance();
+            answer = clazz.getConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(getString(
                     "RuntimeError.6", type), e); //$NON-NLS-1$
@@ -278,6 +282,19 @@ public class ObjectFactory {
         return answer;
     }
 
+    public static KotlinFormatter createKotlinFormatter(Context context) {
+        String type = context.getProperty(PropertyRegistry.CONTEXT_KOTLIN_FORMATTER);
+        if (!stringHasValue(type)) {
+            type = DefaultKotlinFormatter.class.getName();
+        }
+
+        KotlinFormatter answer = (KotlinFormatter) createInternalObject(type);
+
+        answer.setContext(context);
+
+        return answer;
+    }
+
     public static XmlFormatter createXmlFormatter(Context context) {
         String type = context.getProperty(PropertyRegistry.CONTEXT_XML_FORMATTER);
         if (!stringHasValue(type)) {
@@ -313,13 +330,19 @@ public class ObjectFactory {
     public static IntrospectedTable createIntrospectedTableForValidation(Context context) {
         String type = context.getTargetRuntime();
         if (!stringHasValue(type)) {
-            type = IntrospectedTableMyBatis3Impl.class.getName();
+            type = IntrospectedTableMyBatis3DynamicSqlImplV2.class.getName();
         } else if ("MyBatis3".equalsIgnoreCase(type)) { //$NON-NLS-1$
             type = IntrospectedTableMyBatis3Impl.class.getName();
         } else if ("MyBatis3Simple".equalsIgnoreCase(type)) { //$NON-NLS-1$
             type = IntrospectedTableMyBatis3SimpleImpl.class.getName();
         } else if ("MyBatis3DynamicSql".equalsIgnoreCase(type)) { //$NON-NLS-1$
-            type = IntrospectedTableMyBatis3DynamicSqlImpl.class.getName();
+            type = IntrospectedTableMyBatis3DynamicSqlImplV2.class.getName();
+        } else if ("MyBatis3DynamicSqlV1".equalsIgnoreCase(type)) { //$NON-NLS-1$
+            type = IntrospectedTableMyBatis3DynamicSqlImplV1.class.getName();
+        } else if ("MyBatis3DynamicSqlV2".equalsIgnoreCase(type)) { //$NON-NLS-1$
+            type = IntrospectedTableMyBatis3DynamicSqlImplV2.class.getName();
+        } else if ("MyBatis3Kotlin".equalsIgnoreCase(type)) { //$NON-NLS-1$
+            type = IntrospectedTableKotlinImpl.class.getName();
         }
 
         IntrospectedTable answer = (IntrospectedTable) createInternalObject(type);
